force-app/main/default/objects/eSHIP_Custom_Pricing__c/eSHIP_Custom_Pricing__c.object-meta.xml
<CustomObject>
    <label>eSHIP Custom Pricing</label>
    <nameField>
        <displayFormat>EC-{00000}</displayFormat>
        <label>eSHIP Custom Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eSHIP Custom Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>