force-app/main/default/objects/eSHIP_Custom_Pricing__c/fields/Final_Fuel__c.field-meta.xml
<CustomField>
    <fullName>Final_Fuel__c</fullName>
    <formula>Rate_INR__c * Fuel_Surcharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Fuel Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>