force-app/main/default/objects/eSHIP_Custom_Pricing__c/fields/Final_Logistice_Charges__c.field-meta.xml
<CustomField>
    <fullName>Final_Logistice_Charges__c</fullName>
    <formula>Rate_INR__c * Logistice_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Logistice Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>