force-app/main/default/objects/eSHIP_Custom_Pricing__c/fields/l_Liability_Cover_By_BVC__c.field-meta.xml
<CustomField>
    <fullName>l_Liability_Cover_By_BVC__c</fullName>
    <label>Liability Cover By BVC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>