force-app/main/default/objects/eSHIP_Custom_Pricing__c/fields/Liability_l_Charges__c.field-meta.xml
<CustomField>
    <fullName>Liability_l_Charges__c</fullName>
    <formula>Rate_INR__c * Liability_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liability Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>