force-app/main/default/objects/eSHIP_Custom_Pricing__c/fields/Logistice_Charges__c.field-meta.xml
<CustomField>
    <fullName>Logistice_Charges__c</fullName>
    <label>Logistice Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>