force-app/main/default/objects/eSHIP_Custom_Pricing__c/fields/Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Lower_Bound__c</fullName>
    <label>Lower Bound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>