force-app/main/default/objects/eSHIP_Custom_Pricing__c/fields/No_Of_Free_Atttemps__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Free_Atttemps__c</fullName>
    <label>No Of Free Atttemps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>