force-app/main/default/objects/eSHIP_Custom_Pricing__c/fields/Per_Shipment_Freight_Charge__c.field-meta.xml
<CustomField>
    <fullName>Per_Shipment_Freight_Charge__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Per Shipment Freight Charge</label>
    <type>Checkbox</type>
</CustomField>