force-app/main/default/objects/eSHIP_Custom_Pricing__c/fields/Upper_Bound__c.field-meta.xml
<CustomField>
    <fullName>Upper_Bound__c</fullName>
    <label>Upper Bound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>